--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+
+.Is_posted {
+  visibility: hidden;
+  background: red;
+  color: black;
+}
+
+
+html, body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#map {
+  position: absolute;
+  width: 60%;
+  height: 60%;
+  margin-left: 40%;
+  margin-top: 0;
+}
+
+#PostButton {
+  text-align: center;
+  width: 50%;
+  height: 200px;
+  background-color: deepskyblue;
+  color: darkred;
+  font-size: 40px;
+  margin-left: 0px;
+}
