--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,11 @@ html, body {
 
 #PostButton {
   text-align: center;
-  width: 50%;
+  width: 40%;
   height: 200px;
   background-color: deepskyblue;
   color: darkred;
   font-size: 40px;
   margin-left: 0px;
+  margin-top: 100px;
 }
