--- a/src/styles.css
+++ b/src/styles.css
@@ -10,12 +10,15 @@ h1 {
   color: black;
 }
 
-
 html, body {
   width: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
+}
+
+html {
+  background-color: ghostwhite;
 }
 
 #map {
