--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,4 +1,4 @@
-<toh-contact [contact]="selectedContact"></toh-contact>
+<app-contact [contact]="selectedContact"></app-contact>
 
 <ul class="contacts">
   <li *ngFor="let contact of contacts"
