--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,10 @@ html {
 }
 
 #map {
-  position: absolute;
+  position: relative;
   width: 60%;
   height: 60%;
-  margin-left: 40%;
+  margin-left: 0;
   margin-top: 0;
 }
 
