--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@ html {
   height: 200px;
   background-color: deepskyblue;
   color: darkred;
-  font-size: 40px;
+  font-size: 200%;
   margin-left: 0px;
   margin-top: 100px;
 }
