--- a/src/app/contacts/contact.component.html
+++ b/src/app/contacts/contact.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="contact">
-  You selected <input [(ngModel)]="contact.name">
+  You selected {{contact.name}}
+  <!--You selected <input [(ngModel)]="contact.name"> -->
   <br>The phone number is {{contact.phone}}
 </div>
