--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -1,18 +1,18 @@
 .selected {
-  background-color: #a62e5c !important;
+  background-color: #6a6ca6 !important;
   color: white;
 }
 .contacts {
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
-  width: 15em;
+  width: 25em;
 }
 .contacts li {
   cursor: pointer;
   position: relative;
   left: 0;
-  background-color: #EEE;
+  background-color: #d2eaee;
   margin: .5em;
   padding: 0.3em 0.3em 0.3em 0;
   height: 1.6em;
@@ -22,13 +22,13 @@
   white-space: nowrap;
 }
 .contacts li.selected:hover {
-  background-color: #792e5c !important;
+  background-color: #363779 !important;
   color: white;
 }
 .contacts li:hover {
-  color: #a62e5c;
-  background-color: #DDD;
-  left: .1em;
+  color: #4d96a6;
+  background-color: #c2d8dd;
+  left: .3em;
 }
 .contacts .text {
   position: relative;
@@ -39,7 +39,7 @@
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
-  background-color: #a62e5c;
+  background-color: #4d96a6;
   line-height: 1em;
   position: relative;
   left: -1px;
