--- a/src/styles.css
+++ b/src/styles.css
@@ -34,8 +34,8 @@ html {
   width: 40%;
   height: 200px;
   background-color: deepskyblue;
-  color: darkred;
+  color: #482a8b;
   font-size: 200%;
   margin-left: 0px;
-  margin-top: 100px;
+  margin-top: 1%;
 }
