--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -27,7 +27,7 @@
 }
 .contacts li:hover {
   color: #4d96a6;
-  background-color: #c2d8dd;
+  background-color: #96cedd;
   left: .3em;
 }
 .contacts .text {
