--- a/src/styles.css
+++ b/src/styles.css
@@ -41,4 +41,32 @@ html {
   font-size: 200%;
   margin-left: 0px;
   margin-top: 1%;
+  cursor:pointer;
 }
+
+div button {
+  cursor: pointer;
+  background-color: #94cdff;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 10px;
+}
+
+div button {
+  color: #607D88;
+}
+
+div button:hover {
+  color: #039be5;
+  background-color: #CFD8DC;
+}
+
+div button.active {
+  color: #039be5;
+}
+
