--- a/src/app/reference/reference.component.html
+++ b/src/app/reference/reference.component.html
@@ -1,3 +1,12 @@
-<p>
-  reference works!
-</p>
+<h2>
+  <a href="http://my.sfu-kras.ru/safety/fire-building">Действия при пожаре</a>
+  <br>
+  <br>
+  <a href="https://ria.ru/spravka/20120409/621621007.html">Действия при нападении</a>
+  <br>
+  <br>
+  <a href="http://www.amic.ru/voprosdnya/318649/">Действия при утечке газа</a>
+  <br>
+  <br>
+  <a href="https://lifehacker.ru/2013/12/24/first-aid/">Правила оказания первой помощи</a>
+</h2>
